# rustier

./: .gitignore  Cargo.toml  README.md
R-macros/: Cargo.toml
R-macros/src/: lib.rs
examples/: libtest.R  libtest.rs
rustier-macros/: Cargo.toml
rustier-macros/src/: lib.rs
src/: interface.rs  interface_traits.rs  lib.rs
src/internals/: c.rs  mod.rs  sexpr.rs
src/r_types/: integers.rs  logicals.rs  mod.rs  numerics.rs  strings.rs
