[package]
name = "R-sys"
version = "0.1.0"
authors = ["Hayley <github.com@codingcat.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "Rsys"
crate-type = ["cdylib"]      # Creates dynamic lib

[dependencies]
num_enum = "0.5"
R-macros = {path = "./R-macros"}
rayon = "1"