[package]
name = "rustier"
version = "0.1.0"
authors = ["Hayley <github.com@codingcat.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustier"
crate-type = ["cdylib"]      # Creates dynamic lib

[dependencies]
num_enum = "0.5"
r-macros = {path = "./R-macros"}
rayon = "1"