[package]
name = "R-macros"
version = "0.1.0"
authors = ["Hayley <github.com@codingcat.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
[dependencies.syn]
version = "1.0"
features = ["full", "fold"]

[dependencies]
proc-macro2 = "1.0"