[package]
name = "rustier-macros"
version = "0.1.0"
authors = ["Hayley <github.com@codingcat.nl>"]
edition = "2018"
description = "Macros for the rustier crate"
license = "GPL-2.0+"
repository = "https://github.com/HayleyDeckers/rustier"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
[dependencies.syn]
version = "1.0"
features = ["full", "fold"]

[dependencies]
proc-macro2 = "1.0"
